Fixes Jumping Button

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -154,7 +154,7 @@ footer {
 }
 .navbarStartBtn:active {
     position:relative;
-    top:1px;
+    top:8px;
 }
 
 
